[package]
name = "portscanner"
version = "0.4.0"
edition = "2024"
authors = ["Murat Genc <muttafi@gmail.com>"]
description = "A fast, modern port scanner with stealth SYN scan support"
license = "MIT"
repository = "https://github.com/genc-murat/portscanner"
keywords = ["networking", "security", "port-scanner", "nmap", "stealth"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "portscanner"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.10"

# Unix-specific dependencies for raw socket support
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_benchmark"
harness = false

[[bin]]
name = "portscanner"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true
