[package]
name = "portscanner"
version = "0.4.0"
edition = "2021"
authors = ["Murat Genc <muttafi@gmail.com>"]
description = "A fast, modern port scanner with TCP/UDP support, stealth SYN scan, and service detection"
license = "MIT"
repository = "https://github.com/genc-murat/portscanner"
keywords = ["networking", "security", "port-scanner", "nmap", "stealth", "udp"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "portscanner"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.10"
# Added for refactored stealth module
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"

# Unix-specific dependencies for raw socket support
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "portscanner"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Features for optional functionality
[features]
default = ["stealth"]
stealth = []          # Enable stealth scanning capabilities
mock-testing = []     # Enable mock implementations for testing
